--- a/site/mod2_solution/index.html
+++ b/site/mod2_solution/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Our Menu</h1>
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
